app/styles/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@layer utilities {
  .container {
    margin-inline: auto;
    box-sizing: border-box;
    padding-inline: 10px;
  }

  @variant lg {
    .container {
      max-width: 1020px;
    }
  }

  @variant xl {
    .container {
      max-width: 1300px;
    }
  }

  @variant sm {
    .container {
      padding: auto;
    }
  }
}

@utility heading {
  font-size: 22px;
  font-weight: 600 !important;
  color: var(--color-primary);

  @media screen and (max-width: 600px) {
    font-size: 20px;
  }
}

.Toastify__toast {
  font-size: 15px !important;
  border-radius: 4px !important;
  color: black !important;
  padding: 15px !important;
  font-weight: 500 !important;
  min-width: 300px !important;
  width: max-content !important;
  min-height: fit-content !important;
}

@utility sub-heading {
  font-size: 20px;
  font-weight: 500 !important;

  @media screen and (max-width: 600px) {
    font-size: 19px;
  }
}

.thankyou-popup {
  button {
    display: none;
  }
}

.Toastify__toast {
  font-size: 15px !important;
  border-radius: 4px !important;
  color: black !important;
  padding: 15px !important;
  font-weight: 500 !important;
  min-width: 300px !important;
  width: max-content !important;
  min-height: fit-content !important;
}

@utility small-heading {
  @apply text-[18px] font-medium;
}

.news-slider .swiper-button-next,
.news-slider .swiper-button-prev {
  width: 35px;
  height: 35px !important;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
}

/* Add custom background */
.news-slider .swiper-button-next::after,
.news-slider .swiper-button-prev::after {
  font-size: 13px !important; /* Adjust arrow size */
  font-weight: bold !important;
  color: var(--primary); /* Arrow color */
}

@utility content {
  font-size: 15px;
  line-height: 25px;
  overflow-wrap: break-word;

  img,
  video,
  iframe,
  table {
    max-width: 100%;
    height: auto;
  }

  /* Default list styles */
  ul {
    list-style-type: disc;
    padding-left: 1.5rem;
    margin: 1rem 0;
  }

  ol {
    list-style-type: decimal;
    padding-left: 1.5rem;
    margin: 1rem 0;
  }

  li {
    margin-bottom: 0.5rem;
  }

  @media screen and (max-width: 600px) {
    font-size: 14px;
  }
}

.content .ql-align-justify {
  text-align: left !important;
}

@utility sub-content {
  font-size: 14px;
  line-height: 25px;

  @media screen and (max-width: 600px) {
    font-size: 13px;
  }
}

@theme {
  --animate-slide: slide 1s ease-in-out forwards;
  --animate-slidedown: slide-down 1s ease-in-out forwards;

  @keyframes slide {
    0% {
      opacity: 0;
      transform: translateY(0);
    }

    100% {
      opacity: 1;
      transform: translateY(-10px);
    }
  }

  @keyframes slide-down {
    0% {
      opacity: 0;
      transform: translateY(-10px);
    }

    100% {
      opacity: 1;
      transform: translateY(0);
    }
  }
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
}

:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.6 0.2351 26.91);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.33 0.027 98.74);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
}

.dark {
  --background: oklch(0.1548 0.0021 286.15);
  --foreground: oklch(0.9702 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.6058 0.2319 26.15);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.2006 0.002 286.22);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(0.2367 0 0);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

